===================================
TSDuck Change Log and Release Notes
===================================

Version 3.11-682

- Added options --sync-layout, --dump-datagram, --dump-udp, --dump-max and
  --skip to plugin "mpe".

- Bug fix: In rare cases, time conversions could produce incorrect results when
  the time value was in the middle of the "non-existing hour", during the
  spring switch of daylight saving time. In practice, the problem occured on
  Linux when handling the "next change time" of a TOT and the system local
  time was UTC.

Version 3.10-672

- The utility "tstabdump" can now dump sections and files which are sent over
  UDP/IP by "tstables" or the plugin "tables". Command line options were added
  to specify UDP parameters (same UDP reception options as input plugin "ip").

- Added options --fix and --pid to plugin "continuity".

- Added option --after-packets to plugin "filter".

- Added options --default-interface to input plugin "ip" and plugin "mpeinject".

- Added options --inter-time, --max-insert-count, --min-pts, --max-pts and
  --pts-pid to plugin "mux".

- Added option --milli-seconds to plugin "history".

- Input plugin "file" can now read more than one file. Input files are
  concatenated as input stream.

- Added option --fifo-size to output plugin "dektec".

- Added option --atis-idsa to plugins "scrambler" and "descrambler" (perform
  ATIS-IDSA scrambling instead of DVB-CSA2).

- Added utility "tsecmg", a DVB SimulCrypt-compliant ECMG stub to test system
  integration. The plugin "descrambler" has been enhanced to decode the "fake"
  ECM's which are generated by "tsecmg".

- Added option --integer to tsversion (useful to check a version in a script).

- Bug fix: Incorrect behaviour on Linux and macOS when receiving multicast with
  plugins "ip" and "mpeinject" and a --local-interface was specified.

- Bug fix: "tsanalyze" and a few plugins could crash when a video PID contained